Fix messaging, SOS alerts, and contacts not working